--- a/hoa-backend/package.json
+++ b/hoa-backend/package.json
@@ -25,6 +25,7 @@
     "@nestjs/jwt": "^10.1.1",
     "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
+    "@prisma/client": "^5.3.1",
     "jsonwebtoken": "^9.0.2",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
