--- a/hoa-frontend/package.json
+++ b/hoa-frontend/package.json
@@ -20,6 +20,9 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "moment": "^2.29.4",
+    "moment-timezone": "^0.5.43",
+    "ngx-moment": "^6.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
