--- a/hoa-backend/package.json
+++ b/hoa-backend/package.json
@@ -31,7 +31,8 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "stripe": "^14.3.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
