--- a/hoa-frontend/package.json
+++ b/hoa-frontend/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@stripe/stripe-js": "^2.1.11",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.43",
     "ngx-moment": "^6.0.2",
